--- a/hub/package.json
+++ b/hub/package.json
@@ -10,7 +10,9 @@
     "http-proxy-middleware": "^2.0.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.3",
     "react-dropdown": "^1.9.2",
     "react-google-login": "^5.2.2",
     "react-router-dom": "^5.2.0",
