--- a/hub/package.json
+++ b/hub/package.json
@@ -15,8 +15,10 @@
     "react-draggable": "^4.4.3",
     "react-dropdown": "^1.9.2",
     "react-google-login": "^5.2.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
